syntax = "proto3";

package walletpb;

option go_package = "github.com/sidiik/moonpay/wallet_service/walletpb;walletpb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service WalletService {
    rpc RequestWallet(RequestWalletRequest) returns (RequestWalletResponse);
    rpc GetMyWallet(google.protobuf.Empty) returns (GetMyWalletResponse);
}

message RequestWalletRequest {
    string userId = 1;
}

message RequestWalletResponse {
    string walletId = 1;
}

message GetMyWalletResponse {
    string walletId = 1;
    string balance = 2;
    int64 userId  = 3;
    google.protobuf.Timestamp createdAt = 4;
    google.protobuf.Timestamp updatedAt = 5;
}